# apertium-hun

./: AUTHORS  Makefile.am  README.md  apertium-hun.hun.acx  apertium-hun.hun.dix  apertium-hun.pc.in  configure.ac  modes.xml
dev/: hunspell2apes.bash
